--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 blinker==1.9.0
 click==8.3.0
+dotenv==0.9.9
 Flask==3.1.2
+Flask-JWT-Extended==4.7.1
 flask-marshmallow==1.3.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.4
@@ -9,6 +11,8 @@ Jinja2==3.1.6
 MarkupSafe==3.0.3
 marshmallow==4.1.0
 marshmallow-sqlalchemy==1.4.2
+PyJWT==2.10.1
+python-dotenv==1.2.1
 SQLAlchemy==2.0.44
 typing_extensions==4.15.0
 Werkzeug==3.1.3
