--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ click==8.3.0
 dotenv==0.9.9
 Flask==3.1.2
 Flask-JWT-Extended==4.7.1
+Flask-Mail==0.10.0
 flask-marshmallow==1.3.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.4
